--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><head>
+    <title>T-rex</title>
     <script src="p5.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
@@ -8,6 +9,7 @@
 
   </head>
   <body>
+      <h1>Hi</h1>
       <script src="sketch.js"></script>
   
 
